--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Us | Cars Dealership</title>
+
+    <!-- CSS link -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li class="active"><a href="Contact.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Page Header -->
+    <header>
+        <h1>Contact Us</h1>
+        <p>We would love to hear from you</p>
+    </header>
+
+    <!-- Contact Section -->
+    <section class="contact-container">
+
+        <!-- Image -->
+        <div class="contact-image">
+            <img src="images/person1.jpg" alt="Customer Support">
+        </div>
+
+        <!-- Contact Details -->
+        <div class="contact-details">
+            <h2>Get in Touch</h2>
+
+            <p><strong>Address:</strong> 123 Auto Street, Chennai, India</p>
+            <p><strong>Phone:</strong> +91 98765 43210</p>
+            <p><strong>Email:</strong> support@carsdealership.com</p>
+
+            <h3>Business Hours</h3>
+            <p>Monday – Friday: 9:00 AM – 6:00 PM</p>
+            <p>Saturday: 10:00 AM – 4:00 PM</p>
+        </div>
+
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Cars Dealership. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
+
 
