--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -2,57 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Us | Cars Dealership</title>
+    <title>Contact Us</title>
 
-    <!-- CSS link -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- REQUIRED CSS FILES -->
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
+
 <body>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-            <li class="active"><a href="Contact.html">Contact Us</a></li>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Car Dealership</a>
+
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/static/About.html">About</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/static/Contact.html">Contact Us</a>
+            </li>
         </ul>
-    </nav>
+    </div>
+</nav>
 
-    <!-- Page Header -->
-    <header>
-        <h1>Contact Us</h1>
-        <p>We would love to hear from you</p>
-    </header>
+<!-- HEADER IMAGE -->
+<div class="container mt-4 text-center">
+    <img src="/static/images/contactus.png" class="img-fluid mb-4" alt="Contact Us">
+</div>
 
-    <!-- Contact Section -->
-    <section class="contact-container">
+<!-- CONTACT DETAILS -->
+<div class="container">
+    <h2 class="text-center mb-4">Get in Touch</h2>
 
-        <!-- Image -->
-        <div class="contact-image">
-            <img src="images/person1.jpg" alt="Customer Support">
+    <div class="row">
+        <div class="col-md-6">
+            <h5>Dealership Address</h5>
+            <p>
+                Car Dealership Pvt Ltd<br>
+                123 Auto Street<br>
+                Detroit, MI 48201<br>
+                USA
+            </p>
+
+            <h5>Email</h5>
+            <p>support@cardealership.com</p>
+
+            <h5>Phone</h5>
+            <p>+1 987 654 3210</p>
         </div>
 
-        <!-- Contact Details -->
-        <div class="contact-details">
-            <h2>Get in Touch</h2>
-
-            <p><strong>Address:</strong> 123 Auto Street, Chennai, India</p>
-            <p><strong>Phone:</strong> +91 98765 43210</p>
-            <p><strong>Email:</strong> support@carsdealership.com</p>
-
-            <h3>Business Hours</h3>
-            <p>Monday – Friday: 9:00 AM – 6:00 PM</p>
-            <p>Saturday: 10:00 AM – 4:00 PM</p>
+        <div class="col-md-6 text-center">
+            <img src="/static/images/cars.jpg" class="img-fluid rounded" alt="Cars Image">
         </div>
+    </div>
+</div>
 
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Cars Dealership. All rights reserved.</p>
-    </footer>
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center mt-5 p-3">
+    © 2026 Car Dealership | All Rights Reserved
+</footer>
 
 </body>
 </html>
+
 
 
